# robozhab

./: .dockerignore  .env.sample  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: default.yaml  docker-image.yml  docker.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yaml
robozhab/: game.py  main.py
robozhab/base/: chat.py  settings.py  tg_client.py
robozhab/game/: info.py  request.py
scripts/: robozhab
src/: game.py  main.py  settings.py
src/base/: chat.py  settings.py  tg_client.py
tests/: conftest.py  test_chat.py  test_settings.py
tests/base/: test_settings.py
tests/game/: test_request.py
