[aliases]
test=pytest

[options]
include_package_data = True

[metadata]
description_file = README.rst

[bdist_wheel]
python-tag = py310

[coverage:run]
branch = True

[coverage:report]
fail_under = 100

[pycodestyle]
ignore = E701, E722, W504
max_line_length = 79
show_pep8 = True
show_source = True

[tool:pytest]
;pep8ignore = E701

[flake8]
max-line-length = 79
ignore = E701, E722
